--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 language: ruby
 cache: bundler
 before_install: gem install bundler
-script: bundle exec rspec
+script: bundle exec rspec && bundle exec rubocop --config ./.rubocop.yml
 rvm:
   - ruby-head
   - 2.4.2
