--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,14 +1,48 @@
-inherit_gem:
-  rubocop-config-umbrellio: lib/rubocop.rails.yml
-
 AllCops:
   TargetRubyVersion: 2.1
   Exclude:
     - db/schema.rb
-    - ciesta.gemspec
+    - config/**/*.rb
+
+# Metrics
+Metrics/CyclomaticComplexity:
+  Enabled: true
+  Max: 6
 
 Metrics/LineLength:
+  Enabled: true
+  Max: 100
+  AllowHeredoc: true
   IgnoredPatterns: ['#.*']
 
-Rails/SaveBang:
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+# Style
+Style/StringLiterals:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/ClassAndModuleChildren:
+  Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/RegexpLiteral:
+  Enabled: false
+
+# Lint
+Lint/AmbiguousOperator:
+  Enabled: false
+
+Lint/AmbiguousBlockAssociation:
   Enabled: false
