--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ sudo: false
 language: ruby
 cache: bundler
 before_install: gem install bundler
-script:
-  - bundle exec rspec
-  - bundle outdated
+script: bundle exec rspec
 rvm:
   - ruby-head
   - 2.4.2
