--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ before_install: gem install bundler
 script: bundle exec rspec
 rvm:
   - ruby-head
+  - 2.5.1
   - 2.4.2
-  - 2.4.0
-  - 2.3.5
-  - 2.3.1
-  - 2.2.5
-  - 2.2.0
+  - 2.3.0
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
